<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">    

    <TextView 
        android:id="@+id/return_main_activity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/return_action"
        android:textSize="20sp"
        />
    <TextView 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/scan_add_book"
        android:textSize="40sp"
        />
    <TextView 
        android:id="@+id/scan_book"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/scan_book"
        android:textSize="40sp"
        />
</LinearLayout>
