<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout 
	    android:id="@+id/personal_linearlayout0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">	

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.50"
            android:gravity="right"
            android:text="@string/personal_message"
            android:textSize="20sp" />

   		<Button
   		    android:id="@+id/sign_out"
   		    android:layout_width="0dp"
   		    android:layout_height="match_parent"
   		    android:paddingRight="6dp"
   		    android:layout_marginTop="10dp"
   		    android:layout_weight="0.30"
   		    android:gravity="right"
            android:textColor="@color/red_black"
   		    android:text="@string/sign_out"
   		    android:background="@color/white"
   		    android:textSize="20sp" />

    </LinearLayout>
	<LinearLayout 
	    android:id="@+id/personal_linearlayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:clickable="true"
	    android:background="@drawable/item_pressed_change_color"
	    android:orientation="horizontal">
	    <TextView 
	        android:id="@+id/already_come_out"
	        android:layout_width="46dp"
	        android:layout_height="47dp"	
	        android:layout_marginLeft="16dp"
	        android:gravity="center"
	        android:textSize="22sp"
	      	android:textColor="#FFFFFF"
	        android:text="@string/comment"
	        android:background="@drawable/green"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="left"
	        android:layout_marginLeft="18dp"
	        android:text="已发的书"/>
	    <TextView 
	        android:id="@+id/goto_already_come_out"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:layout_marginRight="8dp"
	        android:text="@string/forward"
	        android:textColor="#400000"
	        android:textSize="20dp"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/personal_linearlayout2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:background="@drawable/item_pressed_change_color"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal">	
        <TextView 
	        android:id="@+id/collect_book"
	        android:layout_width="46dp"
	        android:layout_height="47dp"
	        android:layout_marginLeft="16dp"
	        android:gravity="center"
	        android:textColor="#FFFFFF"
	        android:textSize="21sp"
	        android:text="@string/help_icon"
	        android:background="@drawable/purple"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="18dp"
	        android:gravity="left"
	        android:text="收藏的书"/>
	    <TextView 
	        android:id="@+id/goto_collect_book"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:layout_weight="1"
	        android:layout_marginRight="8dp"
	        android:text="@string/forward"
	        android:textSize="20dp"/>
	</LinearLayout>
	
</LinearLayout>
