<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/test_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

     <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@color/white"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >
		<LinearLayout 
		    android:id="@+id/linearLayout1"
		    android:orientation="vertical"
		    android:layout_height="fill_parent"
	        android:layout_weight="1"
		    android:layout_width="wrap_content" >
		    <TextView
	            android:id="@+id/tab_1p"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/tab_1"
	            android:textSize="20dp" />
		    <TextView
	            android:id="@+id/tab_1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="15dp" />
		 </LinearLayout>
        
        <LinearLayout 
			android:id="@+id/linearLayout2"
            android:orientation="vertical"
		    android:layout_height="fill_parent"
	        android:layout_weight="1"
		    android:layout_width="wrap_content">
		    <TextView
	            android:id="@+id/tab_2p"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/tab_2"
	            android:textSize="20dp" />
		    <TextView
	            android:id="@+id/tab_2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="15dp" />
		 </LinearLayout>
		 <LinearLayout 
		    android:id="@+id/linearLayout3"
		    android:orientation="vertical"
            android:layout_weight="1"
		    android:layout_height="fill_parent"
		    android:layout_width="wrap_content">
		    <TextView
	            android:id="@+id/tab_3p"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/tab_3"
	            android:textSize="20dp" />
		    <TextView
	            android:id="@+id/tab_3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="15dp" />
		 </LinearLayout>
		 <LinearLayout 
		     android:id="@+id/linearLayout4"
		     android:orientation="vertical"
		     android:layout_height="fill_parent"
			 android:layout_weight="1"
		     android:layout_width="wrap_content">
		    <TextView
	            android:id="@+id/tab_4p"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/tab_4"
	            android:textSize="20dp" />
		    <TextView
	            android:id="@+id/tab_4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textSize="15dp" />
		 </LinearLayout>
    </LinearLayout>

</LinearLayout>