<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sigUpAllLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:background="@color/title_color"
	    android:orientation="horizontal">    
	
	    <Button 
	        android:id="@+id/return_main_activity"
	        android:layout_width="40dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:layout_marginLeft="4dp"
	        android:text="@string/return_action"
	        android:textSize="22sp"
	        android:textColor="@color/white"
	        android:background="@color/title_color"
	        android:onClick="click_to_back"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:text="@string/scan_add_book"
	        android:textSize="20sp"/>
	   <TextView 
	        android:id="@+id/scan_book"
	        android:layout_width="40dp"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:layout_marginRight="4dp"
	        android:text="@string/logup"
	        android:textSize="30sp"
	        android:textColor="@color/white" />
	</LinearLayout>
	<ScrollView 
	    android:id="@+id/scrollView"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent">
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<LinearLayout  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="30dp">
		  
		        <TextView  
		            android:id="@+id/acount_name"  
		            style="@style/TextStyle"
		            android:text="用户名:" />  
		  
		        <EditText  
		            android:id="@+id/acount_edit"  
		            style="@style/InputStyle"
		            android:textColor="@color/little_green" />  
			</LinearLayout>
			
			<LinearLayout  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="30dp">
		  
		        <TextView  
		            android:id="@+id/password_name"  
		            style="@style/TextStyle"
		            android:text="密码:"   />  
		  
		        <EditText  
		            android:id="@+id/password_edit"  
		            style="@style/InputStyle"
		            android:inputType="textPassword"
		            android:hint="@string/passwor_allert"
		            android:maxLength="12" />  
			</LinearLayout>
			<LinearLayout  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="30dp">
		  
		        <TextView  
		            android:id="@+id/confirm_password_name"  
		            android:text="确认密码:" 
		            style="@style/TextStyle" />  
		  
		        <EditText  
		            android:id="@+id/confirm_password_edit"  
		            style="@style/InputStyle"
		            android:inputType="textPassword" />  
			</LinearLayout>
			<LinearLayout  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="30dp">
		  
		        <TextView  
		            android:id="@+id/phone_name"  
		            style="@style/TextStyle"
		            android:text="手机号:" />  
		  
		        <EditText  
		            style="@style/InputStyle"
		            android:id="@+id/phone_edit"  
		            android:inputType="phone" />  
			</LinearLayout>
			<LinearLayout  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="30dp">
		  
		        <TextView  
		            android:id="@+id/valid_name"  
		            style="@style/TextStyle"
		            android:text="验证码:"  />  
		  
		        <EditText  
		            android:id="@+id/valid_edit"  
		            android:layout_width="0dp"  
		            android:layout_height="40dip"  
		            android:layout_weight="1.4"
		            android:inputType="phone"
		            android:paddingLeft="8dp"
		            android:background="@drawable/bg_selector"
		            android:layout_marginLeft="10dip"  
		            android:layout_marginRight="5dip" />  
		        <Button 
		            android:id="@+id/sendValidCode"
		            android:layout_width="0dp"
		            android:layout_weight="1.1"
		            android:layout_height="40dip"
		            android:layout_marginTop="-5dp"
		            android:gravity="center"
		            android:layout_marginRight="10dip"
		            android:onClick="sendValidCode"
		            android:text="获取验证码"/>    
			</LinearLayout>
			<Button  
		            android:id="@+id/sign_up"  
		            android:layout_width="match_parent"  
		            android:layout_height="40dip"  
		            android:layout_marginTop="30dp"
		            android:layout_marginLeft="10dip"  
		            android:layout_marginRight="10dip"  
		            android:gravity="center"  
		            android:text="注   册"  
		            android:textColor="#000000"  
		            android:textSize="18sp"
		            android:onClick="clickToSignUp"/> 
		</LinearLayout>
	</ScrollView>
</LinearLayout>